GENOME-2044 preparations