@@ -65,14 +65,14 @@
 
     <!-- COMMONS VERSIONS -->
     <commons-digester.version>2.1</commons-digester.version>
-    <commons-lang.version>2.6</commons-lang.version>
-    <commons-io.version>2.4</commons-io.version>
+    <commons-lang3.version>3.6</commons-lang3.version>
+    <commons-io.version>2.6</commons-io.version>
     <commons-beanutils.version>1.9.1</commons-beanutils.version>
     <commons-collections.version>3.2.1</commons-collections.version>
-    <commons-codec.version>1.9</commons-codec.version>
-    <commons.exec.version>1.1</commons.exec.version>
+    <commons-codec.version>1.11</commons-codec.version>
+    <commons.exec.version>1.3</commons.exec.version>
     <commons-dbcp.version>1.4</commons-dbcp.version>
-    <commons-net.version>3.1</commons-net.version>
+    <commons-net.version>3.6</commons-net.version>
     <commons-vfs2.version>2.0</commons-vfs2.version>
     <commons-httpclient.version>3.1</commons-httpclient.version>
     <commons-dbcp.version>1.4</commons-dbcp.version>
@@ -110,8 +110,6 @@
     <spring-boot.jetty.version>9.2.14.v20151106</spring-boot.jetty.version>
     <minimal-json.version>0.9.4</minimal-json.version>
     <xstream.version>1.4.4</xstream.version>
-    <!-- ARGLINE -->
-    <argLine>-XX:MaxPermSize=268m</argLine>
 
 
   </properties>
